feat: Refactor dashboards into sub-components

--- a/src/app/Components/student-dashboard/student-dashboard.component.html
+++ b/src/app/Components/student-dashboard/student-dashboard.component.html
@@ -1,7 +1,1 @@
-<div class="container mt-4">
-  <h2>Student Dashboard</h2>
-  <div class="list-group">
-    <a routerLink="/quizzes" class="list-group-item list-group-item-action">View Quizzes</a>
-    <a routerLink="/my-attempts" class="list-group-item list-group-item-action">My Attempts</a>
-  </div>
-</div>
+<app-student-action></app-student-action>
