--- a/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -1,8 +1,1 @@
-<div class="container mt-4">
-  <h2>Admin Dashboard</h2>
-  <div class="list-group mb-4">
-    <a routerLink="/quiz/create" class="list-group-item list-group-item-action">Create New Quiz</a>
-  </div>
-
-  <app-quiz-list></app-quiz-list>
-</div>
+<app-admin-action></app-admin-action>
